--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,9 +2,36 @@
   <div id="top-header">
     <div class="container">
       <ul class="header-links pull-right">
-        <li>
-          <a href="#"><i class="fa fa-user-o"></i><%= t ".my_account" %></a>
-        </li>
+        <% if logged_in? %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <i class="fa fa-user-o"></i><%= t ".my_account" %><b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to t(".profile") %></li>
+              <li><%= link_to t(".settings") %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to t(".logout"), logout_path, method: :delete %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+
+          <li class="header-text" data-toggle="modal" data-target="#myModal">
+            <%= t ".login" %>
+          </li>
+          <div id="myModal" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <%= render "sessions/login_form" %>
+              </div>
+            </div>
+          </div>
+        <% end %>
       </ul>
     </div>
   </div>
