--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -19,7 +19,8 @@
       <%= yield %>
       <%= render "layouts/admin/footer" %>
       <%= debug params if Rails.env.development? %>
-      <%= javascript_include_tag "admin/custom", "data-turbolinks-track": "reload" %></div>
+      <%= javascript_include_tag "admin/custom", "data-turbolinks-track": "reload" %>
+    </div>
   </div>
 </div>
 </body>
