--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,11 @@
 </head>
 <body>
 <%= render "layouts/header" %>
-  <% flash.each do |message_type, message| %>
-    <%= content_tag :div, message, class: "alert alert-#{message_type}" %>
-  <% end %>
+  <div id="flash_messages">
+    <% flash.each do |message_type, message| %>
+      <%= content_tag :div, message, class: "alert alert-#{message_type}" %>
+    <% end %>
+  </div>
   <%= yield %>
   <%= render "layouts/footer" %>
   <%= debug(params) if Rails.env.development? %>
