--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -42,6 +42,17 @@
                   "form-control col-md-7 col-xs-12" %>
               </div>
             </div>
+              <div class="form-group">
+                <label for="product_avatar"
+                  class="control-label col-md-3 col-sm-3 col-xs-12">
+                  Set avatar
+                </label>
+                <div class="col-md-6 col-sm-6 col-xs-12">
+                  <%= select_tag "product[avatar]",
+                    options_from_collection_for_select(@product.images,
+                    :id, :name, @product.avatar_id), class: "form-control" %>
+                </div>
+              </div>
             <div class="form-group">
               <label for="product_avatar"
                 class="control-label col-md-3 col-sm-3 col-xs-12">
