--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -32,6 +32,12 @@
             </tbody>
             
           </table>
+          <p><strong><%= t ".exit_image" %>:</strong></p>
+          <div style="overflow: hidden;border: 1px solid #CCC;padding: 10px;">
+            <% @product.images.each do |picture| %>
+              <img src="<%= picture.image.url %>" style="float: left; width: 20%;"/>
+            <% end %>
+          </div>
           <%= link_to t(".edit"), edit_admin_product_path(@product) %> |
           <%= link_to t(".back"), admin_products_path %>
         </div>
@@ -39,4 +45,3 @@
     </div>
   </div>
 </div>
-<%= javascript_include_tag "admin/dropzone_config" %>
