--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,8 +8,7 @@
               <i class="fa fa-user-o"></i><%= t ".my_account" %><b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to t(".profile") %></li>
-              <li><%= link_to t(".settings") %></li>
+              <li><%= link_to t(".profile"), current_user %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to t(".logout"), logout_path, method: :delete %>
