--- a/app/views/admin/products/_show.html.erb
+++ b/app/views/admin/products/_show.html.erb
@@ -30,6 +30,13 @@
             </tbody>
           
           </table>
+          <p><strong><%= t ".exits_image" %>:</strong></p>
+          <div style="overflow: hidden;border: 1px solid #CCC;padding: 10px;">
+            <% @images.each do |picture| %>
+              <img src="<%= picture.image.url %>"
+                style="float: left; width: 20%;"/>
+            <% end %>
+          </div>
           <%= link_to t(".back"), admin_products_path %>
         </div>
       </div>
