--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -18,6 +18,7 @@
           <div class="alert alert-<%= message_type %>"><%= message %></div>
         <% end %>
       </div>
+      <%= render "shared/admin_modal" %>
       <%= yield %>
       <%= render "layouts/admin/footer" %>
       <%= debug params if Rails.env.development? %>
