--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -22,7 +22,7 @@
       <%= yield %>
       <%= render "layouts/admin/footer" %>
       <%= debug params if Rails.env.development? %>
-      <%= javascript_include_tag "admin/custom", "data-turbolinks-track": "reload" %>
+      <%= javascript_include_tag "admin/custom" %>
     </div>
   </div>
 </div>
