--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,5 +15,6 @@
   <%= yield %>
   <%= render "layouts/footer" %>
   <%= debug(params) if Rails.env.development? %>
+  <%= javascript_include_tag "navbar.js" %>
 </body>
 </html>
