--- a/app/views/admin/orders/_edit.html.erb
+++ b/app/views/admin/orders/_edit.html.erb
@@ -26,10 +26,10 @@
           <%= t ".email" %> : <%= @order.user_email %>
         </li>
         <li class="list-group-item">
-          <%= t ".phone" %> : <%= @order.user_phone %>
+          <%= t ".phone" %> : <%= @order.phone %>
         </li>
         <li class="list-group-item">
-          <%= t "o.address" %> : <%= @order.user_address %>
+          <%= t "o.address" %> : <%= @order.address %>
         </li>
       </ul>
       <div class="form-group col-md-6 col-md-offset-3">
