--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -5,6 +5,14 @@
     <div class="col-md-12 col-sm-12 col-xs-12">
       <div class="x_panel">
         <div class="x_content">
+          <div class="col-md-offset-3 col-md-6 col-sm-6 col-xs-12 text-center">
+            <%= form_tag admin_orders_path, method: "get",
+                         enforce_utf8: false do %>
+              <%= text_field_tag :search, params[:search], class: "form-control" %>
+              <%= submit_tag t(".search"), :name => nil,
+                             class: "btn btn-success", width: "10px" %>
+            <% end %>
+          </div>
           <table class="table table-bordered">
             <thead>
               <tr>
