--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -13,17 +13,18 @@
             <div class="price-filter">
               <div id="price-slider"></div>
                 <div class="input-number price-min">
-                  <%= number_field_tag("price_min", 0 ,option={id: "price-min"}) %>
+                  <%= number_field_tag("price_min", params[:price_min] || 0 ,option={id: "select-min"}) %>
                   <span class="qty-up">+</span>
                   <span class="qty-down">-</span>
                 </div> -
                 <div class="input-number price-max">
-                  <%= number_field_tag("price_max", Product.maximum(:price), option={id: "price-max"}) %>
+                  <%= number_field_tag("price_max", params[:price_max] || Product.maximum(:price), option={id: "select-max"}) %>
                   <span class="qty-up">+</span>
                   <span class="qty-down">-</span>
                 </div>
                 <br></br>
                 <button class="btn btn-primary center-block" type="submit">Submit</button>
+              <input type="number" hidden id ="price-max" value="<%= Product.maximum(:price)  %>">
           </div>
         </div>
       </div>
@@ -42,7 +43,7 @@
           </div>
         </div>
         <div class="row">
-            <%= render @products %>
+          <%= render @products %>
         </div>
         <div class="store-filter clearfix">
           <%= paginate @products, theme: 'twitter-bootstrap-3' %>
