--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -49,6 +49,10 @@
               <% end %>
           </div>
         </div>
+        <div class="fb-share-button"
+             data-href="#{request.protocol}#{request.host_with_port}#{request.fullpath}"
+             data-layout="button_count">
+        </div>
       </div>
 
       <div class="col-md-12">
