--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -50,7 +50,7 @@
           </div>
         </div>
         <div class="fb-share-button"
-             data-href="#{request.protocol}#{request.host_with_port}#{request.fullpath}"
+             data-href=""
              data-layout="button_count">
         </div>
       </div>
