--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,4 @@
+<% provide :title, @product.name %>
 <div id="breadcrumb" class="section">
   <div class="container">
     <%= render "shared/breadcumb" %>
