--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,9 @@
   <meta property="og:type"          content="website" />
   <meta property="og:title"         content="<%= full_title(yield :title) %>"/>
   <meta property="og:description"   content="Web site sale print"/>
-  <meta property="og:image"         content="https://shrouded-stream-40111.herokuapp.com/assets/product01-17812ba88e9c6ca84a3ef7057f77ab0f6a526c52b8f8aa90dcbdac61e5e2e02b.png"/>
+  <% unless @product.nil? %>
+    <meta property="og:image"         content="<%= product_avatar(@product) %>"/>
+  <% end %>
   <%= render "layouts/rails_default" %>
   <%= render "layouts/shim" %>
 </head>
