--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -3,8 +3,8 @@
 <head>
   <title><%= full_title yield(:title) %></title>
   <%= csrf_meta_tags %>
-  <%= stylesheet_link_tag "admin/application", media: "all", "data-turbolinks-track": "reload" %>
-  <%= javascript_include_tag "admin/application", "data-turbolinks-track": "reload" %>
+  <%= stylesheet_link_tag "admin/application", media: "all" %>
+  <%= javascript_include_tag "admin/application" %>
   <%= render "layouts/shim" %>
 </head>
 <body class="nav-md">
