--- a/app/views/admin/users/_show.html.erb
+++ b/app/views/admin/users/_show.html.erb
@@ -25,7 +25,7 @@
             </tr>
             <tr>
               <th><%= t ".role" %></th>
-              <th> <%= @user.permission %> </th>
+              <th> <%= @user.role_name %> </th>
             </tr>
             </tbody>
           
