--- a/app/views/admin/users/_show.html.erb
+++ b/app/views/admin/users/_show.html.erb
@@ -25,10 +25,10 @@
             </tr>
             <tr>
               <th><%= t ".role" %></th>
-              <th> <%= @user.permission %> </th>
+              <th> <%= @user.role_name %> </th>
             </tr>
             </tbody>
-          
+
           </table>
           <%= link_to t(".back"), admin_users_path %>
         </div>
