--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -88,7 +88,7 @@
                 </div>
 
                 <div class="col-md-3">
-                <% if logged_in? %>
+                <% if user_signed_in? %>
                   <div id="review-form">
                     <span><%= t ".your_rating" %> </span>
                     <%= form_for Rate.new, html: {:class => "review-form"},
