--- a/app/views/users/registrations/_signup_form.html.erb
+++ b/app/views/users/registrations/_signup_form.html.erb
@@ -1,7 +1,6 @@
 <div id="register" class="animate form registration_form">
   <section class="login_content">
-
-      <%= form_for @user, remote: true do |f| %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), remote: true) do |f| %>
 
         <h1><%= t ".text" %></h1>
         <div id="notice">
@@ -30,7 +29,7 @@
       <div class="login-link">
         <%= t ".member" %>
         <span class="change_link">
-          <%= link_to t(".signup"), login_path, remote: true %>
+          <%= link_to t(".login"), new_user_session_path, remote: true %>
         </span>
       </div>
   </section>
