--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -119,3 +119,27 @@
 .item_quantity{
   width: 40px;
 }
+
+input,
+.btn {
+  width: 100%;
+  padding: 12px;
+  border: none;
+  border-radius: 4px;
+  margin: 5px 0;
+  opacity: 0.85;
+  display: inline-block;
+  font-size: 17px;
+  line-height: 20px;
+  text-decoration: none;
+}
+
+.fb {
+  background-color: $blue;
+  color: $white;
+}
+
+.google {
+  background-color: $red;
+  color: $white;
+}
