Admin config mail

--- a/app/views/layouts/admin/_slidebar.html.erb
+++ b/app/views/layouts/admin/_slidebar.html.erb
@@ -43,6 +43,10 @@
           <li>
             <%= link_to admin_roles_path do%>
               <i class="fa fa-users"></i> <%= t ".roles" %>
+          </li>
+          <li>
+              <%= link_to admin_config_mails_path do%>
+              <i class="fa fa-cogs"></i> <%= t ".settings" %>
             <% end %>
           </li>
         </ul>
