--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,24 +1,27 @@
-<% provide :title, t(".title")  %>
-<div class="col-md-1">
-  <h3 class="text-success"><%= t ".title" %></h3>
-  <br>
-  <div class="easy-tree">
-    <div class="easy-tree-toolbar">
-      <%= form_for [:admin, @category], remote: true do |f| %>
-      <div class="create">
-        <div class="input-group welld">
-          <%= f.text_field :name, class: "form-control" %>
-          <%= hidden_field_tag "category[parent_code]", "0" %>
-          <span class="input-group-btn">
+<% provide :title, t(".title") %>
+<h3 class="text-success text-center"><%= t ".title" %></h3>
+<div class="right" role="main">
+  <div class="row">
+    <div class=" col-md-offset-3 col-md-6">
+      <br>
+      <div class="easy-tree">
+        <div class="easy-tree-toolbar">
+          <%= form_for [:admin, @category], remote: true do |f| %>
+            <div class="create">
+              <div class="input-group welld">
+                <%= f.text_field :name, class: "form-control" %>
+                <%= hidden_field_tag "category[parent_code]", "0" %>
+                <span class="input-group-btn">
             <%= f.submit t(".submit"), class: "btn btn-default btn-success" %>
           </span>
+              </div>
+            </div>
+          <% end %>
         </div>
+        <ul id="root">
+          <%= render @categories %>
+        </ul>
       </div>
-      <% end %>
     </div>
-    <ul id="root">
-      <%= render @categories %>
-    </ul>
   </div>
 </div>
-
