--- a/app/views/static_pages/_banner.html.erb
+++ b/app/views/static_pages/_banner.html.erb
@@ -1,4 +1,5 @@
 <div class="item <%= "active" if index == 0 %>">
+  <%= link_to "", product %>
   <%= product_avatar product %>
   <div class="carousel-caption">
     <h4><%= product.name %></h4>
