--- a/app/views/layouts/admin/_slidebar.html.erb
+++ b/app/views/layouts/admin/_slidebar.html.erb
@@ -43,6 +43,7 @@
           <li>
             <%= link_to admin_roles_path do%>
               <i class="fa fa-users"></i> <%= t ".roles" %>
+              <% end %>
           </li>
           <li>
               <%= link_to admin_config_mails_path do%>
