--- a/app/views/shared/_admin_modal.html.erb
+++ b/app/views/shared/_admin_modal.html.erb
@@ -1,5 +1,5 @@
 <div class="modal fade" id="admin_modal" role="dialog">
-  <div class="modal-dialog">
+  <div class="modal-dialog <%= yield :modal_size  %>">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
