--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,8 +2,8 @@
   <div id="carousel-example-generic" class="carousel slide"
     data-ride="carousel">
     <div class="carousel-inner" role="listbox">
-      <% @top_seller_products.each_with_index do |product, index| %>
-        <%= render "banner", product: product, index: index %>
+      <% @banners.each_with_index do |banner, index| %>
+        <%= render "banner", banner: banner, index: index %>
       <% end %>
     </div>
     <a class="left carousel-control" href="#carousel-example-generic"
